--- a/app/front/view/public/footer.html
+++ b/app/front/view/public/footer.html
@@ -23,11 +23,11 @@
                 <div class="footdiv_menulis_d">
                     <a class="footdiv_menulis_d_h3">主营产品</a>
                     <ul>
-                        <li><a target="_parent" href="/logistics/1">国际快递</a></li>
-                        <li><a target="_parent" href="/logistics/2">专线渠道</a></li>
-                        <li><a target="_parent" href="/logistics/3">俄罗斯渠道</a></li>
-                        <li><a target="_parent" href="/logistics/4">邮政渠道</a></li>
-                        <li><a target="_parent" href="/logistics/5">FBA</a></li>
+                        <li><a target="_parent" href="/product/1">国际快递</a></li>
+                        <li><a target="_parent" href="/product/2">专线渠道</a></li>
+                        <li><a target="_parent" href="/product/3">俄罗斯渠道</a></li>
+                        <li><a target="_parent" href="/product/4">邮政渠道</a></li>
+                        <li><a target="_parent" href="/product/5">FBA</a></li>
                     </ul>
                 </div>
 
@@ -48,9 +48,9 @@
                     <a class="footdiv_menulis_d_h3">关于我们</a>
                     <ul>
                         <ul id="Nav" class="">
-                            <li><a target="_parent" href="/about">公司简介</a></li>
-                            <li><a target="_parent" href="/contact">联系我们</a></li>
-                            <li><a target="_parent" href="/job">加入我们</a></li>
+                            <li><a target="_parent" href="/about/2">公司简介</a></li>
+                            <li><a target="_parent" href="/about/4">联系我们</a></li>
+                            <li><a target="_parent" href="/contact">加入我们</a></li>
                         </ul>
 
                     </ul>
