--- a/app/front/view/public/header.html
+++ b/app/front/view/public/header.html
@@ -4,15 +4,14 @@
         <div class="divheaderti">欢迎来到广州威速易供应链管理有限公司！</div>
         <div class="divheali">
             <li>
-                <a href="/login"><img src="__FRONT__/images/wse_02.jpg" /></a>
+                <a href="http://www.gdwse.com:8083/"><img src="__FRONT__/images/wse_02.jpg" /></a>
             </li>
             <li>
-                <a href="/register"><img src="__FRONT__/images/wse_03.jpg" /></a>
+                <a href="http://www.gdwse.com:8082/gotoRegister.htm"><img src="__FRONT__/images/wse_03.jpg" /></a>
             </li>
         </div>
     </div>
 </div>
-
 <!-- logo位置 -->
 <div class="header_top">
     <div class="content">
