--- a/app/admin/view/home/index foreach.html
+++ b/app/admin/view/home/index foreach.html
@@ -85,7 +85,7 @@
                 </dl>
             </li>
             <li class="layui-nav-item to-index">
-                <a href="www.wse.com">前台首页</a>
+                <a href="www.twe56.com">前台首页</a>
             </li>
         </ul>
 
